legacy/cluster/cloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  tls:
    - hosts:
        - cloud.luma.chrismiller.xyz
      secretName: cloud-tls
  rules:
    - host: cloud.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
